--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,11 @@ input:focus {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3, fit-content(1px));
+    gap: calc(1.2 * var(--size-index));
+}
+
+.header__navbar {
+    width: fit-content;
 }
 
 .header__navitem {
