--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ input:focus {
 
 .header__navitem a {
     text-decoration: none;
+    width: max-content;
     font-size: calc(1.2 * var(--size-index));
     color: var(--font-main);
 }
