--- a/styles.css
+++ b/styles.css
@@ -447,6 +447,7 @@ input:focus {
     width: 100%;
     overflow: hidden;
     position: relative;
+    left: 0;
     padding: 80px 0;
     background-size: cover;
     background-repeat: no-repeat;
