--- a/styles.css
+++ b/styles.css
@@ -461,7 +461,7 @@ input:focus {
     top: 0;
     right: 0;
     transform: none;
-    left: 0;
+    left: 50%;
     width: 100vw;
     height: calc(100% + 150px);
     margin-top: -150px;
