--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,13 @@
 }
 
 @font-face {
-    font-family: 'Futura PT Book';
-    src: url('./fonts/FuturaPT-Book.eot');
-    src: url('FuturaPT-Book.ttf') format('embedded-opentype'),
-    url('./fonts/FuturaPT-Book.woff') format('woff'),
-    url('./fonts/FuturaPT-Book.ttf') format('truetype');
-    font-weight: lighter;
+    font-family: 'Futura PT';
+    src: url('./fonts/FuturaPT-Medium.eot');
+    src: url('./fonts/FuturaPT-Medium.ttf') format('embedded-opentype'),
+    url('./fonts/FuturaPT-Meduim.woff') format('woff'),
+    url('./fonts/FuturaPT-Medium.ttf') format('truetype');
     font-style: normal;
+    font-weight: 500;
 }
 
 * {
@@ -33,7 +33,7 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    font-family: 'Futura PT Book';
+    font-family: 'Futura PT';
     font-size: calc(0.8 * var(--size-index));
     object-fit: cover;
 }
@@ -861,6 +861,7 @@ input:focus {
 }
 
 .ordering__field input, .field__main {
+    width: 100%;
     font-size: calc(1.1 * var(--size-index));
     font-weight: bold;
 }
@@ -1009,7 +1010,7 @@ input:focus {
 }
 
 .contacts {
-    margin-top: 96px;
+    margin-top: 16px;
 }
 
 .payment {
