--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ input:focus {
     text-align: center;
     max-width: 75%;
     margin: 32px auto 0;
+    font-weight: lighter;
 }
 
 .search__field {
